refactor: Consolidate k2script examples and remove legacy test files
- Remove obsolete demo and test files from k2script module
- Update core k2script engine and template implementations
- Add new example scripts for tensor operations and data processing
- Clean up legacy test infrastructure and dependencies

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>